--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.197",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.15",
+    "cookie": "^0.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "evergreen-ui": "^7.1.9",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "postcss": "^8.4.29",
     "react": "18.2.0",
