--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,16 +18,12 @@
         "name": "next"
       }
     ],
-    // "paths": {
-    //   "@/*": ["./*"]
-    // },
-    "baseUrl": "./src",
     "paths": {
-      "pages": ["./src/pages"],
-      "components": ["./src/components"],
-      "layouts": ["./src/layouts"],
-      "assets": ["./src/assets"]
-    },
+      "components/*": ["./components/*"],
+      "assets/*": ["./assets/*"],
+      "constants/*": ["./constants/*"],
+      "utils/*": ["./utils/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
